package com.example.homework.Factory_pattern;

public class AcerLaptop implements Laptop {
    @Override
    public void assemble() {
        System.out.println("Assembling an Acer Laptop.");
    }
}
