package com.example.homework.Factory_pattern;

public class DellLaptop implements Laptop {
    @Override
    public void assemble() {
        System.out.println("Assembling a Dell Laptop.");
    }
}
