package com.example.homework.Factory_pattern;

public class HpLaptop implements Laptop {
    @Override
    public void assemble() {
        System.out.println("Assembling an HP Laptop.");
    }
}
