package com.example.homework.Factory_pattern;

public interface Laptop {
    void assemble();
}
