package com.example.homework.Factory_pattern;

public class LenovoLaptop implements Laptop {
    @Override
    public void assemble() {
        System.out.println("Assembling a Lenovo Laptop.");
    }
}
